<resources>
    <string name="app_name">Widgets Demo</string>
    <string name="java">Java</string>
    <string name="kotlin">Kotlin</string>
    <string name="javascript">JavaScript</string>
    <string name="button_for_checkbox">Button for Checkbox</string>
    <string name="checkbox">CheckBox</string>
    <string name="radiobutton">RadioButton</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="button_for_radiobutton">Button For RadioGroup</string>
    <string name="upload">Upload</string>
    <string name="mail">Mail</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
</resources>